--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confuse Your Reader With "Caesar Cipher"</title>
+    <title>Cryptography With "Caesar Cipher"</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Confuse Your Enemy</h1>
+        <h1>Hide Your Text</h1>
         <div id="app-container">
             <textarea name="" id="text"></textarea>
             <div id="buttons-container">
